--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -26,7 +26,7 @@
               <option value="1">Aluno</option>
               <option value="2">Professor</option>
             </select>
-            <label for="tipoUsuario">Tipo de Usuário</label>
+            <label for="tipoUsuario"></label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
             <div class="error-message"></div>
@@ -74,9 +74,7 @@
 
           <!-- Widget de Captura Biométrica -->
           <div class="face-recognition-container">
-            <button type="button" class="view-camera-btn">
-              Visualizar Câmera
-            </button>
+            <button type="button" class="view-camera-btn"></button>
 
             <div class="face-scan-widget">
               <div class="scan-animation-overlay"></div>
