--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -91,7 +91,7 @@
           </div>
         </div>
 
-        <!-- Tabela de Ferramentas (Desktop) -->
+        <!-- Tabela de Ferramentas -->
         <div class="tools-container">
           <table class="tools-table">
             <thead>
