--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -45,7 +45,11 @@
           <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
         </div>
         <!-- CORREÇÃO AQUI: Mudei o redirecionamento para a página correta -->
-        <div class="menu-item" id="novo-emprestimo-btn">
+        <div
+          class="menu-item"
+          id="novo-emprestimo-btn"
+          onclick="window.location.href='../PostEmp/PostEmp.html'"
+        >
           <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
 
