--- a/front/Login/LoginProfessor.html
+++ b/front/Login/LoginProfessor.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="CSS/LoginProf.css" />
+    <title data-translate-key="teacher-login-title">Login</title>
+    <link rel="stylesheet" href="CSS/CssLoginProf.css" />
+    <script src="./JS/JSLogin.js" defer></script>
   </head>
   <body>
     <div class="background">
@@ -13,7 +14,9 @@
     </div>
 
     <div class="botaoVoltar">
-      <a class="buttonVoltar" href="../index.html">Voltar</a>
+      <a class="buttonVoltar" href="../index.html" data-translate-key="back-btn"
+        >Voltar</a
+      >
     </div>
     <main class="main-content">
       <div class="logo-container">
@@ -26,24 +29,33 @@
 
       <div class="form-container">
         <form id="loginForm" class="form-grid">
-          <h1 class="title">Login Professor</h1>
+          <h1 class="title" data-translate-key="teacher-login-header">
+            Login Professor
+          </h1>
           <div class="input-group floating-label">
             <input type="text" id="username" required />
-            <label for="username">Nome de Usuário</label>
+            <label for="username" data-translate-key="username-label"
+              >Nome de Usuário</label
+            >
             <div class="input-border"></div>
             <span class="validation-icon"></span>
           </div>
-
           <div class="input-group floating-label">
             <input type="password" id="senha" required />
-            <label for="senha">Senha</label>
+            <label for="senha" data-translate-key="password-label">Senha</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
           </div>
-
-          <a href="../MenuProf/Menu.html" class="botao">Entrar</a>
+          <button type="submit" class="botao" data-translate-key="login-btn">
+            Entrar
+          </button>
         </form>
       </div>
     </main>
+
+    <div class="language-switcher">
+      <button onclick="switchLanguage('pt')">Português</button>
+      <button onclick="switchLanguage('en')">English</button>
+    </div>
   </body>
 </html>
