--- a/front/index.html
+++ b/front/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-translate-key="title">FaceShield - Auth 3.0</title>
-    <link rel="stylesheet" href="./Inicio/CSS/css.css" />
-    <script src="./Inicio/JS/js.js" defer></script>
+    <link rel="stylesheet" href="./Inicio/CSS/CssIndex.css" />
+    <script src="./Inicio/JS/JSInicioIndex.js" defer></script>
   </head>
   <body class="auth-container">
     <div class="main-container">
@@ -26,7 +26,12 @@
       </div>
 
       <div class="auth-actions-container">
-        <a href="#" class="glowingbutton" onclick="initAuth('login', event)" data-translate-key="login-btn">
+        <a
+          href="#"
+          class="glowingbutton"
+          onclick="initAuth('login', event)"
+          data-translate-key="login-btn"
+        >
           Entrar
         </a>
 
