--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -3,31 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Empréstimos - Ferramentas</title>
-    <link rel="stylesheet" href="./CSS/ListaFerramentasCSS.css" />
-    <script src="./JS/ListaFerramentasJS.js" defer></script>
+    <title data-translate-key="tools-list-title">
+      Sistema de Empréstimos - Ferramentas
+    </title>
+    <link rel="stylesheet" href="./CSS/CssListaFerramentas.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
+    <script src="./JS/JSListaFerramentas.js" defer></script>
   </head>
   <body>
     <div class="loading-overlay" id="loading-overlay">
       <div class="loading-content">
         <div class="loading" style="width: 40px; height: 40px"></div>
-        <p style="margin-top: 20px; font-size: 1.2rem">Carregando dados...</p>
+        <p
+          style="margin-top: 20px; font-size: 1.2rem"
+          data-translate-key="loading-data"
+        >
+          Carregando dados...
+        </p>
       </div>
     </div>
 
     <div class="container">
-      <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-tools"></i> Controle de Ferramentas</h2>
+          <h2 data-translate-key="sidebar-tools-header">
+            <i class="fas fa-tools"></i> Controle de Ferramentas
+          </h2>
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+          onclick="window.location.href='../ListaAluno/ListaUsuario.html'"
+          data-translate-key="sidebar-users"
         >
           <i class="fas fa-user"></i> Usuários
         </div>
@@ -35,95 +45,99 @@
         <div
           class="menu-item"
           onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+          data-translate-key="sidebar-loans"
         >
           <i class="fas fa-clipboard-list"></i> Empréstimos
         </div>
-        <div class="menu-item active">
+        <div class="menu-item active" data-translate-key="sidebar-tools">
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../Locais/local.html'"
+          data-translate-key="sidebar-locations"
         >
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../PostEmp/PostEmp.html'"
+          data-translate-key="sidebar-new-loan"
         >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div
+          class="menu-item"
+          onclick="window.location.href='../index.html'"
+          data-translate-key="sidebar-logout"
+        >
           <i class="fas fa-sign-out-alt"></i> Sair
         </div>
       </div>
 
-      <!-- Conteúdo Principal - Página de Ferramentas -->
       <div class="main-content">
         <div
           class="header"
           onclick="window.location.href='../MenuProf/Menu.html'"
         >
-          <h1 class="page-title">
+          <h1 class="page-title" data-translate-key="tools-list-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
           </h1>
-          <button class="logout-btn">
+          <button class="logout-btn" data-translate-key="menu-back-btn">
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
 
-        <!-- Botões de Ação -->
         <div class="action-buttons">
-          <button class="btn btn-primary" id="add-tool-btn">
+          <button
+            class="btn btn-primary"
+            id="add-tool-btn"
+            data-translate-key="add-tool-btn"
+          >
             <i class="fas fa-plus"></i> Adicionar Ferramenta
           </button>
         </div>
 
-        <!-- Filtros e Pesquisa -->
         <div class="search-section">
           <div class="search-group">
             <i class="fas fa-search"></i>
             <input
               type="text"
               id="search-input"
+              data-translate-key="search-tool-placeholder"
               placeholder="Pesquisar ferramenta..."
             />
           </div>
         </div>
 
-        <!-- Tabela de Ferramentas (Desktop) -->
         <div class="tools-container">
           <table class="tools-table">
             <thead>
               <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Marca</th>
-                <th>Modelo</th>
-                <th>QR Code</th>
-                <th>Estado</th>
-                <th>Disponível</th>
-                <th>Descrição</th>
-                <th>Local</th>
-                <th>Ações</th>
+                <th data-translate-key="table-id">ID</th>
+                <th data-translate-key="tool-name">Nome</th>
+                <th data-translate-key="tool-brand">Marca</th>
+                <th data-translate-key="tool-model">Modelo</th>
+                <th data-translate-key="tool-qrcode">QR Code</th>
+                <th data-translate-key="tool-state">Estado</th>
+                <th data-translate-key="tool-available">Disponível</th>
+                <th data-translate-key="tool-description">Descrição</th>
+                <th data-translate-key="tool-location">Local</th>
+                <th data-translate-key="table-actions">Ações</th>
               </tr>
             </thead>
-            <tbody id="tools-table-body">
-              <!-- Dados serão carregados via JavaScript -->
-            </tbody>
+            <tbody id="tools-table-body"></tbody>
           </table>
         </div>
 
-        <!-- Cards de Ferramentas (Mobile) -->
-        <div class="tools-cards" id="tools-cards">
-          <!-- Dados serão carregados via JavaScript -->
-        </div>
+        <div class="tools-cards" id="tools-cards"></div>
 
-        <!-- Modal para Adicionar/Editar Ferramenta -->
         <div id="tool-modal" class="modal">
           <div class="modal-content">
             <div class="modal-header">
-              <h2 id="modal-title">Adicionar Nova Ferramenta</h2>
+              <h2 id="modal-title" data-translate-key="modal-tool-add-title">
+                Adicionar Nova Ferramenta
+              </h2>
               <button class="close-btn">&times;</button>
             </div>
             <div class="modal-body">
@@ -131,7 +145,9 @@
                 <input type="hidden" id="tool-id" />
 
                 <div class="form-group">
-                  <label for="tool-name">Nome da Ferramenta *</label>
+                  <label for="tool-name" data-translate-key="tool-name-label">
+                    Nome da Ferramenta *
+                  </label>
                   <input
                     type="text"
                     id="tool-name"
@@ -142,7 +158,11 @@
 
                 <div class="form-row">
                   <div class="form-group">
-                    <label for="tool-brand">Marca *</label>
+                    <label
+                      for="tool-brand"
+                      data-translate-key="tool-brand-label"
+                      >Marca *</label
+                    >
                     <input
                       type="text"
                       id="tool-brand"
@@ -151,7 +171,11 @@
                     />
                   </div>
                   <div class="form-group">
-                    <label for="tool-model">Modelo *</label>
+                    <label
+                      for="tool-model"
+                      data-translate-key="tool-model-label"
+                      >Modelo *</label
+                    >
                     <input
                       type="text"
                       id="tool-model"
@@ -163,13 +187,23 @@
 
                 <div class="form-row">
                   <div class="form-group">
-                    <label for="tool-qrcode">QR Code</label>
+                    <label
+                      for="tool-qrcode"
+                      data-translate-key="tool-qrcode-label"
+                      >QR Code</label
+                    >
                     <input type="text" id="tool-qrcode" class="form-control" />
                   </div>
                   <div class="form-group">
-                    <label for="tool-estado">Estado *</label>
+                    <label
+                      for="tool-estado"
+                      data-translate-key="tool-state-label"
+                      >Estado *</label
+                    >
                     <select id="tool-estado" class="form-control" required>
-                      <option value="">Selecione...</option>
+                      <option value="" data-translate-key="select-default">
+                        Selecione...
+                      </option>
                       <option value="Novo">Novo</option>
                       <option value="Usado">Usado</option>
                       <option value="Desgastado">Desgastado</option>
@@ -180,26 +214,42 @@
 
                 <div class="form-row">
                   <div class="form-group">
-                    <label for="tool-id_local">Local *</label>
+                    <label
+                      for="tool-id_local"
+                      data-translate-key="tool-location-label"
+                      >Local *</label
+                    >
                     <select id="tool-id_local" class="form-control" required>
-                      <option value="">Carregando locais...</option>
+                      <option value="" data-translate-key="loading-locations">
+                        Carregando locais...
+                      </option>
                     </select>
                   </div>
                   <div class="form-group">
-                    <label>Disponibilidade *</label>
+                    <label data-translate-key="tool-available-label"
+                      >Disponibilidade *</label
+                    >
                     <div class="checkbox-group">
                       <input
                         type="checkbox"
                         id="tool-disponibilidade"
                         checked
                       />
-                      <label for="tool-disponibilidade">Disponível</label>
+                      <label
+                        for="tool-disponibilidade"
+                        data-translate-key="tool-status-available"
+                        >Disponível</label
+                      >
                     </div>
                   </div>
                 </div>
 
                 <div class="form-group">
-                  <label for="tool-descricao">Descrição</label>
+                  <label
+                    for="tool-descricao"
+                    data-translate-key="tool-description-label"
+                    >Descrição</label
+                  >
                   <textarea
                     id="tool-descricao"
                     class="form-control"
@@ -209,8 +259,18 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button class="btn" id="cancel-btn">Cancelar</button>
-              <button class="btn btn-primary" id="save-btn">
+              <button
+                class="btn"
+                id="cancel-btn"
+                data-translate-key="modal-btn-cancel"
+              >
+                Cancelar
+              </button>
+              <button
+                class="btn btn-primary"
+                id="save-btn"
+                data-translate-key="modal-btn-save-tool"
+              >
                 Salvar Ferramenta
               </button>
             </div>
@@ -220,5 +280,10 @@
     </div>
 
     <div id="notification" class="notification"></div>
+
+    <div class="language-switcher">
+      <button onclick="switchLanguage('pt')">Português</button>
+      <button onclick="switchLanguage('en')">English</button>
+    </div>
   </body>
 </html>
