--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -3,78 +3,94 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Gerenciamento de Locais</title>
+    <title data-translate-key="page-title">
+      Sistema de Gerenciamento de Locais
+    </title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <!-- Seu arquivo CSS existente -->
-    <link rel="stylesheet" href="CSS/Local.css" />
+    <link rel="stylesheet" href="CSS/CssLocal.css" />
+    <script src="./JS/JSLocal.js" defer></script>
   </head>
   <body>
     <div class="container">
-      <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-map-marker-alt"></i> Sistema Locais</h2>
+          <h2 data-translate-key="sidebar-header">
+            <i class="fas fa-map-marker-alt"></i> Sistema Locais
+          </h2>
         </div>
         <div
           class="menu-item"
-          onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+          onclick="window.location.href='../ListaAluno/ListaUsuario.html'"
+          data-translate-key="sidebar-users"
         >
           <i class="fas fa-user"></i> Usuários
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+          data-translate-key="sidebar-loans"
         >
           <i class="fas fa-clipboard-list"></i> Empréstimos
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
+          data-translate-key="sidebar-tools"
         >
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
-        <div class="menu-item active">
+        <div class="menu-item active" data-translate-key="sidebar-locations">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
         <div
           class="menu-item"
           onclick="window.location.href='../PostEmp/PostEmp.html'"
+          data-translate-key="sidebar-new-loan"
         >
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div
+          class="menu-item"
+          onclick="window.location.href='../index.html'"
+          data-translate-key="sidebar-logout"
+        >
           <i class="fas fa-sign-out-alt"></i> Sair
         </div>
       </div>
 
-      <!-- Conteúdo Principal -->
       <div class="main-content">
         <div class="header">
-          <h1 class="page-title">
+          <h1 class="page-title" data-translate-key="header-title">
             <i class="fas fa-map-marked-alt"></i> Gerenciamento de Locais
           </h1>
           <button
             class="logout-btn"
             onclick="window.location.href='../MenuProf/Menu.html'"
+            data-translate-key="menu-back-btn"
           >
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
 
-        <!-- Botões de Ação -->
         <div class="action-buttons">
-          <button class="btn btn-primary" id="add-location-btn">
+          <button
+            class="btn btn-primary"
+            id="add-location-btn"
+            data-translate-key="add-location-btn"
+          >
             <i class="fas fa-plus"></i> Adicionar Local
           </button>
           <button class="btn btn-purple" id="view-toggle-btn">
-            <i class="fas fa-th"></i> Visualização em Cards
+            <i class="fas fa-th"></i>
+            <span data-translate-key="view-toggle-cards"
+              >Visualização em Cards</span
+            >
           </button>
         </div>
 
-        <!-- Filtros e Pesquisa -->
         <div class="search-section">
           <div class="search-group">
             <i class="fas fa-search"></i>
@@ -82,65 +98,68 @@
               type="text"
               id="search-input"
               placeholder="Pesquisar local..."
+              data-translate-key="search-placeholder"
             />
           </div>
         </div>
 
-        <!-- Tabela de Locais -->
         <div id="table-view">
           <div style="overflow-x: auto">
             <table class="locations-table">
               <thead>
                 <tr>
-                  <th>ID</th>
-                  <th>Espaço</th>
-                  <th>Armário</th>
-                  <th>Prateleira</th>
-                  <th>Estojo</th>
-                  <th>Ações</th>
+                  <th data-translate-key="table-id">ID</th>
+                  <th data-translate-key="table-space">Espaço</th>
+                  <th data-translate-key="table-cabinet">Armário</th>
+                  <th data-translate-key="table-shelf">Prateleira</th>
+                  <th data-translate-key="table-case">Estojo</th>
+                  <th data-translate-key="table-actions">Ações</th>
                 </tr>
               </thead>
-              <tbody id="locations-table-body">
-                <!-- Dados serão carregados via JavaScript -->
-              </tbody>
+              <tbody id="locations-table-body"></tbody>
             </table>
           </div>
         </div>
 
-        <!-- Visualização em Cards -->
         <div id="card-view" style="display: none">
-          <div class="location-grid" id="location-grid">
-            <!-- Cards serão carregados via JavaScript -->
-          </div>
+          <div class="location-grid" id="location-grid"></div>
         </div>
 
-        <!-- Estado vazio -->
         <div id="empty-state" class="empty-state" style="display: none">
           <i class="fas fa-map-marker-alt"></i>
-          <h3>Nenhum local cadastrado</h3>
-          <p>Adicione novos locais para começar a organizar suas ferramentas</p>
+          <h3 data-translate-key="empty-state-title">
+            Nenhum local cadastrado
+          </h3>
+          <p data-translate-key="empty-state-subtitle">
+            Adicione novos locais para começar a organizar suas ferramentas
+          </p>
           <button
             class="btn btn-primary"
             style="margin-top: 20px"
             id="add-first-location"
+            data-translate-key="add-first-location-btn"
           >
             <i class="fas fa-plus"></i> Adicionar Primeiro Local
           </button>
         </div>
 
-        <!-- Modal para Adicionar/Editar Local -->
         <div id="location-modal" class="modal">
           <div class="modal-content">
             <div class="modal-header">
-              <h2 id="modal-title">Adicionar Novo Local</h2>
+              <h2 id="modal-title" data-translate-key="modal-add-title">
+                Adicionar Novo Local
+              </h2>
               <button class="close-btn">&times;</button>
             </div>
             <div class="modal-body">
               <form id="location-form">
                 <input type="hidden" id="location-id" />
-
                 <div class="form-group">
-                  <label for="location-space">Nome do Espaço *</label>
+                  <label
+                    for="location-space"
+                    data-translate-key="modal-label-space"
+                    >Nome do Espaço *</label
+                  >
                   <input
                     type="text"
                     id="location-space"
@@ -148,10 +167,13 @@
                     required
                   />
                 </div>
-
                 <div class="form-row">
                   <div class="form-group">
-                    <label for="location-cabinet">Armário *</label>
+                    <label
+                      for="location-cabinet"
+                      data-translate-key="modal-label-cabinet"
+                      >Armário *</label
+                    >
                     <input
                       type="text"
                       id="location-cabinet"
@@ -160,7 +182,11 @@
                     />
                   </div>
                   <div class="form-group">
-                    <label for="location-shelf">Prateleira *</label>
+                    <label
+                      for="location-shelf"
+                      data-translate-key="modal-label-shelf"
+                      >Prateleira *</label
+                    >
                     <input
                       type="text"
                       id="location-shelf"
@@ -169,16 +195,29 @@
                     />
                   </div>
                 </div>
-
                 <div class="form-group">
-                  <label for="location-case">Estojo (opcional)</label>
+                  <label
+                    for="location-case"
+                    data-translate-key="modal-label-case"
+                    >Estojo (opcional)</label
+                  >
                   <input type="text" id="location-case" class="form-control" />
                 </div>
               </form>
             </div>
             <div class="modal-footer">
-              <button class="btn" id="cancel-btn">Cancelar</button>
-              <button class="btn btn-primary" id="save-btn">
+              <button
+                class="btn"
+                id="cancel-btn"
+                data-translate-key="modal-btn-cancel"
+              >
+                Cancelar
+              </button>
+              <button
+                class="btn btn-primary"
+                id="save-btn"
+                data-translate-key="modal-btn-save"
+              >
                 Salvar Local
               </button>
             </div>
@@ -187,11 +226,14 @@
       </div>
     </div>
 
-    <!-- Elementos para notificações e loading -->
     <div id="notification" class="notification" style="display: none"></div>
     <div id="loading-overlay" class="loading-overlay" style="display: none">
       <div class="loading-spinner"></div>
     </div>
-    <script src="./js/LocalJS.JS"></script>
+
+    <div class="language-switcher">
+      <button onclick="switchLanguage('pt')">Português</button>
+      <button onclick="switchLanguage('en')">English</button>
+    </div>
   </body>
 </html>
