--- a/front/Login/CameraLogin.html
+++ b/front/Login/CameraLogin.html
@@ -3,40 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login com Reconhecimento Facial</title>
-    <link rel="stylesheet" href="./CSS/LoginCamera.css" />
-    <script src="./JS/Loginjs.js" defer></script>
+    <title data-translate-key="camera-login-title">
+      Login com Reconhecimento Facial
+    </title>
+    <link rel="stylesheet" href="./CSS/CssLoginCamera.css" />
+    <script src="./JS/JSLogin.js" defer></script>
   </head>
   <body>
     <div class="decorative-border"></div>
-
     <div class="botaoVoltar">
-      <a href="../index.html" class="buttonVoltar">Voltar</a>
+      <a href="../index.html" class="buttonVoltar" data-translate-key="back-btn"
+        >Voltar</a
+      >
     </div>
 
     <div class="login-container">
-      <h1>Login com Reconhecimento Facial</h1>
-
+      <h1 data-translate-key="camera-login-header">
+        Login com Reconhecimento Facial
+      </h1>
       <div class="face-scan-widget">
         <video id="video" autoplay playsinline muted></video>
         <div class="scan-animation-overlay"></div>
         <div class="scanning-line-effect"></div>
       </div>
-
-      <p id="mensagem">Aguardando reconhecimento...</p>
-
+      <p id="mensagem" data-translate-key="camera-status-waiting">
+        Aguardando reconhecimento...
+      </p>
       <div class="botaoProf">
-        <a href="LoginProfessor.html" class="buttonProfessor"
+        <a
+          href="LoginProfessor.html"
+          class="buttonProfessor"
+          data-translate-key="teacher-login-btn"
           >Login Professor</a
         >
       </div>
     </div>
 
-    <!-- Feedback -->
     <div id="feedback" class="feedback"></div>
-
     <div class="loading-overlay">
       <div class="loading-spinner"></div>
+    </div>
+
+    <div class="language-switcher">
+      <button onclick="switchLanguage('pt')">Português</button>
+      <button onclick="switchLanguage('en')">English</button>
     </div>
   </body>
 </html>
