--- a/front/MenuProf/Menu.html
+++ b/front/MenuProf/Menu.html
@@ -3,70 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema do Professor</title>
+    <title data-translate-key="page-title">Sistema do Professor</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/Menu.css" />
+    <link rel="stylesheet" href="./CSS/CssMenu.css" />
+    <script src="./JS/JSMenuProf.js" defer></script>
   </head>
   <body>
     <div class="header">
-      <h1>Sistema do Professor</h1>
+      <h1 data-translate-key="header-title">Sistema do Professor</h1>
     </div>
 
     <div class="menu-container">
-      <!-- Alunos -->
       <div
         class="menu-card"
         id="alunos"
-        onclick="window.location.href='../ListaAluno/ListUsuário.html'"
+        onclick="window.location.href='../ListaAluno/ListaUsuario.html'"
       >
-        <h2>Usuários</h2>
-        <p>Visualizar Usuários</p>
+        <h2 data-translate-key="card-users-title">Usuários</h2>
+        <p data-translate-key="card-users-desc">Visualizar Usuários</p>
       </div>
 
-      <!-- Empréstimos -->
       <div
         class="menu-card"
         id="emprestimos"
         onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
       >
-        <h2>Empréstimos</h2>
-        <p>Histórico de itens emprestados</p>
+        <h2 data-translate-key="card-loans-title">Empréstimos</h2>
+        <p data-translate-key="card-loans-desc">
+          Histórico de itens emprestados
+        </p>
       </div>
 
-      <!-- Ferramentas -->
       <div
         class="menu-card"
         id="ferramentas"
         onclick="window.location.href='../ListaFerramentas/ListaFerramentas.html'"
       >
-        <h2>Ferramentas</h2>
-        <p>Visualizar ferramentas cadastradas</p>
+        <h2 data-translate-key="card-tools-title">Ferramentas</h2>
+        <p data-translate-key="card-tools-desc">
+          Visualizar ferramentas cadastradas
+        </p>
       </div>
 
-      <!-- Locais -->
       <div
         class="menu-card"
         id="locais"
-        onclick="window.location.href='../Locais/local.html'"
+        onclick="window.location.href='../Locais/Local.html'"
       >
-        <h2>Locais</h2>
-        <p>Áreas cadastradas</p>
+        <h2 data-translate-key="card-locations-title">Locais</h2>
+        <p data-translate-key="card-locations-desc">Áreas cadastradas</p>
       </div>
 
-      <!-- Novo Empréstimo -->
       <div
         class="menu-card"
         id="novo-emprestimo"
         onclick="window.location.href='../PostEmp/PostEmp.html'"
       >
-        <h2>Fazer Empréstimo</h2>
-        <p>Registrar empréstimo do professor</p>
+        <h2 data-translate-key="card-new-loan-title">Fazer Empréstimo</h2>
+        <p data-translate-key="card-new-loan-desc">
+          Registrar empréstimo do professor
+        </p>
       </div>
     </div>
 
-    <a href="../index.html" class="logout-btn" id="logout">Sair</a>
+    <a
+      href="../index.html"
+      class="logout-btn"
+      id="logout"
+      data-translate-key="logout-btn"
+      >Sair</a
+    >
+
+    <div class="language-switcher">
+      <button onclick="switchLanguage('pt')">Português</button>
+      <button onclick="switchLanguage('en')">English</button>
+    </div>
   </body>
 </html>
