--- a/front/ListaAluno/ListaUsuario.html
+++ b/front/ListaAluno/ListaUsuario.html
@@ -65,7 +65,7 @@
       <div class="main-content">
         <div
           class="header"
-          onclick="window.location.href='../MenuProf/Menu.html'"
+          onclick="window.location.href='../MenuProf/MenuProf.html'"
         >
           <h1 class="page-title" data-translate-key="page-title">
             <i class="fas fa-user-friends"></i> Usuários
