--- a/front/ListaFerramentas/ListaFerramentas.html
+++ b/front/ListaFerramentas/ListaFerramentas.html
@@ -78,7 +78,7 @@
       <div class="main-content">
         <div
           class="header"
-          onclick="window.location.href='../MenuProf/Menu.html'"
+          onclick="window.location.href='../MenuProf/MenuProf.html'"
         >
           <h1 class="page-title" data-translate-key="tools-list-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
