--- a/front/Locais/local.html
+++ b/front/Locais/local.html
@@ -68,7 +68,7 @@
           </h1>
           <button
             class="logout-btn"
-            onclick="window.location.href='../MenuProf/Menu.html'"
+            onclick="window.location.href='../MenuProf/MenuProf.html'"
             data-translate-key="menu-back-btn"
           >
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
