--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-i18n="main-title">FaceShield - Auth 3.0</title>
-    <link rel="stylesheet" href="Inicio/CSS/css.css" />
+    <link rel="stylesheet" href="Inicio/CSS/CssInicioIndex.css" />
     <script src="Inicio/JS/inicioEspanhol.js"></script>
     <script src="Inicio/JS/js.js"></script>
   </head>
